--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,11 +61,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\BufferVisualization.cs" />
+    <Compile Include="Assets\FFT.cs" />
     <Compile Include="Assets\OceanConst.cs" />
     <Compile Include="Assets\OceanSimulation.cs" />
     <None Include="Assets\Buf2Tex.compute" />
     <None Include="Assets\UpdateSpectrum.compute" />
     <None Include="Assets\FFT.compute" />
+    <None Include="Assets\UpdateDisplacement.shader" />
+    <None Include="Assets\Radix2FFT.compute" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>E:/Code/Unity/FFTOceanSimulation/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
     </Reference>
